--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,16 +36,56 @@
             android:background="#E8F1EF"
             android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/Clock_ID"
-                android:layout_width="0dp"
+
+
+            <LinearLayout
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="30dp"
+                android:layout_marginTop="4dp"
                 android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:text="@string/feature1"
-                android:textSize="18sp"
-                android:layout_marginStart="30dp" />
+                android:background="#E8F1EF"
+                android:orientation="vertical">
+
+
+                <TextView
+                    android:id="@+id/Clock_ID"
+                    android:layout_width="80dp"
+                    android:layout_height="20dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Alarm Clock"
+                    android:textSize="18sp" />
+
+
+                <Button
+                    android:id="@+id/SetAlarm"
+                    android:layout_width="80dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginTop="10dp"
+                    android:text="setTime"
+                    android:textSize="8sp"/>
+
+
+
+            </LinearLayout>
+
+
+            <EditText
+                android:id="@+id/rotate_speed"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:autofillHints=""
+                android:ems="10"
+                android:hint="rotate speed"
+                android:inputType="textPersonName"
+                android:textColorHighlight="#8BC34A"
+                android:textColorLink="#8BC34A"
+                android:textSize="12sp" />
+
 
             <Switch
                 android:id="@+id/feature1Switch"
@@ -57,6 +97,8 @@
                 android:textColorLink="#8BC34A"
                 android:textSelectHandleRight="@android:color/holo_green_light"
                 android:layout_marginEnd="30dp" />
+
+
         </LinearLayout>
 
         <LinearLayout
@@ -70,14 +112,29 @@
 
             <TextView
                 android:id="@+id/shake_ID"
-                android:layout_width="0dp"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
+                android:layout_marginStart="30dp"
                 android:layout_marginLeft="30dp"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="@string/turn_on_screen_by_shaking"
-                android:textSize="18sp"
-                android:layout_marginStart="30dp" />
+                android:textSize="18sp" />
+
+
+            <EditText
+                android:id="@+id/shakeSensitivity"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:ems="10"
+                android:hint="sensitivity"
+                android:inputType="textPersonName"
+                android:textColorHighlight="#8BC34A"
+                android:textColorLink="#8BC34A"
+                android:textSize="12sp"
+                android:autofillHints=""
+                tools:ignore="InvalidId" />
 
             <Switch
                 android:id="@+id/shakeSwitch"
@@ -135,6 +192,8 @@
                 android:textSelectHandleRight="@android:color/holo_green_light"
                 android:layout_marginEnd="30dp" />
         </LinearLayout>
+
+
 
     </LinearLayout>
 
